fix deprecated way of referencing images. See: https://stackoverflow.com/questions/64852112/create-react-app-4-0-cannot-resolve-image-path-in-public-folder
Related to upgrading node/npm: 12b7afc


Former-commit-id: cba9152fd91258717704b553fa117f612743b0a0

--- a/app/src/component/playlist/playlist.css
+++ b/app/src/component/playlist/playlist.css
@@ -20,7 +20,7 @@
   transition-timing-function: ease-in;
 }
 .playlist-video-thumbnail-container {
-  background-image: url('/grain.png');
+  background-image: url('../../grain.png');
   background-blend-mode:multiply;
 }
 
